# Pico_Programming

./: .gitignore  README.md  create_project.sh  pico_sdk_setup.sh  pico_tools_setup.sh
gpio_interfacing/: BuildProject.sh  CMakeLists.txt  main.c
my_project/: BuildProject.sh  CMakeLists.txt  main.c
pico-tools/picotool-build/: CMakeCache.txt  Makefile  cmake_install.cmake  data_locs.cpp  install_manifest.txt  picotool
pico-tools/picotool-build/bintool/: Makefile  cmake_install.cmake
pico-tools/picotool-build/boot_bootrom_headers/: Makefile  cmake_install.cmake
pico-tools/picotool-build/boot_picobin_headers/: Makefile  cmake_install.cmake
pico-tools/picotool-build/boot_picoboot_headers/: Makefile  cmake_install.cmake
pico-tools/picotool-build/boot_uf2_headers/: Makefile  cmake_install.cmake
pico-tools/picotool-build/elf/: Makefile  cmake_install.cmake
pico-tools/picotool-build/elf2uf2/: Makefile  cmake_install.cmake
pico-tools/picotool-build/enc_bootloader/: CMakeCache.txt  Makefile  cmake_install.cmake
pico-tools/picotool-build/enc_bootloader_mbedtls/: CMakeCache.txt  Makefile  cmake_install.cmake
pico-tools/picotool-build/errors/: Makefile  cmake_install.cmake
pico-tools/picotool-build/lib/: Makefile  cmake_install.cmake
pico-tools/picotool-build/pico_binary_info/: Makefile  cmake_install.cmake
pico-tools/picotool-build/pico_platform/: Makefile  cmake_install.cmake
pico-tools/picotool-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
pwm_interfacing/: BuildProject.sh  CMakeLists.txt  main.c
(+11 files in other folders)
