cmake_minimum_required(VERSION 3.13...3.27)
include(pico_sdk_import.cmake)
project(gpio_interfacing)
pico_sdk_init()
add_executable(gpio_interfacing main.c)
target_link_libraries(gpio_interfacing pico_stdlib hardware_gpio)
pico_enable_stdio_usb(gpio_interfacing 1)
pico_enable_stdio_uart(gpio_interfacing 0)
pico_add_extra_outputs(gpio_interfacing)
