cmake_minimum_required(VERSION 3.13...3.27)
include(pico_sdk_import.cmake)
project(pwm_interfacing)
pico_sdk_init()
add_executable(pwm_interfacing main.c)
target_link_libraries(pwm_interfacing pico_stdlib hardware_pwm)
pico_enable_stdio_usb(pwm_interfacing 1)
pico_enable_stdio_uart(pwm_interfacing 0)
pico_add_extra_outputs(pwm_interfacing)
